syntax="proto3";

package schema.base.v1beta1;

import "third_party/proto/cosmos_proto/cosmos.proto";
import "third_party/proto/gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "schema/traits/base";


message hasMutables {
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.goproto_stringer) = false;
    option (gogoproto.equal)            = false;
    option (cosmos_proto.implements_interface) = "HasMutables";
    
    google.protobuf.Any properties = 1 [
        (cosmos_proto.accepts_interface) = "Properties"
    ];

}




